--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
-    "react-icons": "^5.1.0",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
