--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
