--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "hls.js": "^1.5.19",
     "mobx": "^6.13.1",
     "mobx-react": "^9.1.1",
     "react": "^18.2.0",
