[chore] 도메인 주소 tstube 적용

--- a/nginx-setup/default.conf
+++ b/nginx-setup/default.conf
@@ -1,6 +1,6 @@
     server {
         listen 80;
-        server_name www.xn----bv7eq1qhzbe7i6wn.shop;
+        server_name www.tstube.shop;
 
             location /api/ {
                 proxy_pass http://spring-container:8080/;  # Proxy to Spring Boot API
