[chore] 웹서버 nginx 동영상 업로드 1G 제한 설정 추가

--- a/nginx-setup/default.conf
+++ b/nginx-setup/default.conf
@@ -2,7 +2,16 @@
         listen 80;
         server_name www.tstube.shop;
 
+            location /api/upload {
+                client_max_body_size 1G;
+                proxy_pass http://spring-container:8080/upload;  # Proxy to Spring Boot API
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            }
+      
             location /api/ {
+                client_max_body_size 50M;
                 proxy_pass http://spring-container:8080/;  # Proxy to Spring Boot API
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -14,8 +23,7 @@
                 index index.html;
                 try_files $uri /index.html;
             }
-
-            # WebSocket Proxying
+            
         location /ws/ {
             proxy_pass http://spring-container:8080/ws/;  # WebSocket endpoint in Spring Boot
             proxy_http_version 1.1;
